--- a/user/templates/show.html
+++ b/user/templates/show.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">  
     <title>Dados dos Usuários</title>  
      {% load static %}  
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>  
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>  
 <body>  
 <table class="table table-striped table-bordered table-sm">  
